[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "Report panic messages to the host stderr using semihosting"
documentation = "https://rust-embedded.github.io/panic-semihosting/panic_semihosting"
keywords = ["panic-handler", "panic-impl", "panic", "semihosting"]
license = "MIT OR Apache-2.0"
name = "panic-semihosting"
repository = "https://github.com/rust-embedded/panic-semihosting"
version = "0.5.1"

[dependencies.cortex-m]
git = "https://github.com/rust-embedded/cortex-m"
rev = "b70a2179f4e8ee7908b61a6a97970e0cfcf2f313"

[dependencies.cortex-m-semihosting]
git = "https://github.com/rust-embedded/cortex-m-semihosting"
rev = "471378bc848172e12e22b9a3b83190747e70bf5c"

[features]
exit = []
inline-asm = ["cortex-m-semihosting/inline-asm", "cortex-m/inline-asm"]
